--- a/css/login.css
+++ b/css/login.css
@@ -38,35 +38,7 @@ body {
   margin-top: 1.5rem;
 }
 
-.id_content p {
-  color: #474747;
-  font-family: Inter;
-  font-size: 1.125rem;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  margin-bottom: 0.31rem;
-  margin-left: 0.94rem;
-}
-
-#id_input {
-  width: 25rem;
-  height: 3.125rem;
-  flex-shrink: 0;
-  border-radius: 0.9375rem;
-  border: 1px solid #9b9b9b;
-  padding-left: 30px;
-}
-
-#id_input::placeholder {
-  color: #acacac;
-  font-family: Inter;
-  font-size: 1.125rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-
+.id_content p,
 .pw_content p {
   color: #474747;
   font-family: Inter;
@@ -78,6 +50,7 @@ body {
   margin-left: 0.94rem;
 }
 
+#id_input,
 #pw_input {
   width: 25rem;
   height: 3.125rem;
@@ -87,6 +60,7 @@ body {
   padding-left: 30px;
 }
 
+#id_input::placeholder,
 #pw_input::placeholder {
   color: #acacac;
   font-family: Inter;
@@ -96,10 +70,22 @@ body {
   line-height: normal;
 }
 
+#wrap_login_error {
+  display: flex;
+}
+
+.login_error p {
+  color: #e80000;
+  font-family: Inter;
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
 .wrap_login_button {
   display: flex;
   flex-direction: column;
-  margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
 
