--- a/css/homeLogout.css
+++ b/css/homeLogout.css
@@ -7,7 +7,7 @@ body {
 
 .home_header {
   display: flex;
-  align-items: baseline;
+  align-items: flex-end;
 }
 
 .home_header a {
@@ -23,9 +23,8 @@ body {
 }
 
 .home_header img {
-  width: 4.375rem;
-  height: 3.82875rem;
-  transform: rotate(-13.559deg);
+  width: 10rem;
+  height: 10rem;
   flex-shrink: 0;
 }
 
