--- a/css/findPW.css
+++ b/css/findPW.css
@@ -2,19 +2,19 @@ body {
   margin-top: 4.56rem;
 }
 
-.findID_header {
+.findPW_header {
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
 
-#findID_arrow {
+#findPW_arrow {
   width: 2.1875rem;
   height: 1.36719rem;
   flex-shrink: 0;
 }
 
-.findID_header p {
+.findPW_header p {
   color: #434343;
   text-align: center;
   font-family: Inter;
@@ -24,26 +24,46 @@ body {
   line-height: normal;
 }
 
-.bottom_findID_header {
+.bottom_findPW_header {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.bottom_findID_header img {
+.bottom_findPW_header img {
   width: 12.5rem;
   height: 12.5rem;
   flex-shrink: 0;
 }
 
-.findID_header_box {
+.findPW_header_box {
   position: relative;
 }
 
-#findID_IDbox {
+#findPW_IDbox {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 18.75rem;
+  height: 3.75rem;
+  flex-shrink: 0;
+  border-radius: 3rem;
+  border: 1px solid #000;
+  color: #000;
+  text-align: center;
+  font-family: Inter;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-decoration: none;
+  padding-left: 2.03rem;
+}
+
+#findPW_PWbox {
   position: absolute;
-  left: 0;
+  left: 55%;
   top: 50%;
   transform: translateY(-50%);
   width: 9.375rem;
@@ -66,35 +86,38 @@ body {
   justify-content: center;
 }
 
-#findID_pwbox {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  width: 18.75rem;
-  height: 3.75rem;
-  flex-shrink: 0;
-  border-radius: 3rem;
-  border: 1px solid #000;
-  color: #000;
-  text-align: center;
-  font-family: Inter;
-  font-size: 1.125rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  text-decoration: none;
-  padding-right: 30px;
-}
-
-.wrap_findID_content {
+.wrap_findPW_content {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 1.12rem;
 }
 
-.name_content p,
-.birth_content p {
+.bottom_id_content {
+  display: flex;
+}
+
+#certified_button {
+  width: 6.44956rem;
+  height: 3.0625rem;
+  flex-shrink: 0;
+  border-radius: 0.9375rem;
+  border: none;
+  background: rgba(255, 0, 0, 0.5);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  color: #fff;
+  text-align: center;
+  font-family: Inter;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-left: 1.36rem;
+  cursor: pointer;
+}
+
+.id_content p,
+.certifiednum_content p {
   color: #474747;
   font-family: Inter;
   font-size: 1.125rem;
@@ -105,8 +128,8 @@ body {
   margin-bottom: 0.44rem;
 }
 
-#findID_name_input,
-#findID_birth_input {
+#findPW_id_input,
+#findPW_certifiednum_input {
   width: 25rem;
   height: 3.125rem;
   flex-shrink: 0;
@@ -115,8 +138,8 @@ body {
   padding-left: 30px;
 }
 
-#findID_name_input::placeholder,
-#findID_birth_input::placeholder {
+#findPW_id_input::placeholder,
+#findPW_certifiednum_input::placeholder {
   color: #acacac;
   font-family: Inter;
   font-size: 1.125rem;
@@ -125,12 +148,12 @@ body {
   line-height: normal;
 }
 
-.findID_error {
+.findPW_error {
   display: flex;
   margin-left: 0.94rem;
 }
 
-.findID_error p {
+.findPW_error p {
   color: #f00;
   text-align: right;
   font-family: Inter;
@@ -140,13 +163,13 @@ body {
   line-height: normal;
 }
 
-.findID_button {
+.findPW_button {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 
-#findID_button {
-  width: 24.9375rem;
+#findPW_button {
+  width: 26.81025rem;
   height: 4.0625rem;
   flex-shrink: 0;
   border-radius: 3rem;
