--- a/css/solve.css
+++ b/css/solve.css
@@ -55,7 +55,7 @@ a {
 }
 
 .help_req_a {
-  color: #3a7dff;
+  color: #939393;
   text-align: center;
   font-family: Inter;
   font-size: 1.875rem;
@@ -66,7 +66,7 @@ a {
 }
 
 .help_sol_a {
-  color: #939393;
+  color: #3a7dff;
   text-align: center;
   font-family: Inter;
   font-size: 1.875rem;
@@ -160,7 +160,7 @@ hr {
   min-width: 85rem;
 }
 
-.wrap_request {
+.wrap_solve {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -168,7 +168,7 @@ hr {
   min-width: 100rem;
 }
 
-.request_header {
+.solve_header {
   position: absolute;
   left: 27rem;
   display: flex;
@@ -176,7 +176,7 @@ hr {
   margin-bottom: 0;
 }
 
-#request_box {
+#solve_box {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -218,17 +218,6 @@ hr {
   text-decoration-line: underline;
 }
 
-.request_header p {
-  color: #ff7a7a;
-  font-family: Inter;
-  font-size: 0.9375rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  margin-left: 1.06rem;
-  /* margin-right: 31.69rem; */
-}
-
 .request_container {
   width: 59.375rem;
   height: 29.25rem;
@@ -239,99 +228,75 @@ hr {
   margin-top: 4.337rem;
 }
 
+.solve_container {
+  width: 59.375rem;
+  height: 29.25rem;
+  flex-shrink: 0;
+  border-radius: 1.25rem;
+  border: 3px solid #c2d3f5;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  margin-top: 4.337rem;
+  padding-left: 1.25rem;
+  padding-right: 1.19rem;
+  padding-top: 1.25rem;
+  padding-bottom: 4rem;
+}
+
 .title_container,
+.detail_container,
 .content_container {
   display: flex;
   flex-direction: column;
-  margin-left: 1.81rem;
+  justify-content: center;
 }
 
-.title_container p {
-  color: #464646;
-  font-family: Inter;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  margin-top: 1.06rem;
-  margin-bottom: 0.69rem;
-  margin-left: 0.5rem;
-}
-
-.title_container input {
-  width: 55.75rem;
-  height: 3.3125rem;
+.title_container {
+  /* width: 55.125rem; */
+  height: 2.875rem;
   flex-shrink: 0;
   border-radius: 0.9375rem;
   border: 1px solid #c2d3f5;
   background: #fff;
-}
-
-.content_container p {
-  color: #464646;
+  color: #242424;
   font-family: Inter;
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  margin-top: 0.69rem;
-  margin-bottom: 0.69rem;
-  margin-left: 0.5rem;
+  padding-left: 1.03rem;
 }
 
-.content_container input {
-  width: 55.75rem;
-  height: 14.5rem;
-  flex-shrink: 0;
-  border-radius: 0.9375rem;
-  border: 1px solid #c2d3f5;
-  background: #fff;
-}
-
-.title_container input::placeholder,
-.content_container input::placeholder {
-  color: #9f9f9f;
-  font-family: Inter;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  padding-left: 1.31rem;
-}
-
-.point_container {
+.detail_container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
+  margin-top: 0.62rem;
+  margin-bottom: 0.69rem;
+}
+
+.detail_left {
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  margin-top: 0.94rem;
-  margin-bottom: 0.63rem;
 }
-
-.point_container p {
-  color: #464646;
-  font-family: Inter;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-right: 0.69rem;
-}
-
-.point_container input {
-  width: 6.9375rem;
-  height: 3.125rem;
+.detail_point {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 8.5rem;
+  height: 2.875rem;
   flex-shrink: 0;
   border-radius: 0.9375rem;
   border: 1px solid #c2d3f5;
   background: #fff;
 }
-
-.point_container input::placeholder {
-  color: #9f9f9f;
-  text-align: center;
+.detail_point img {
+  width: 4.375rem;
+  height: 4.375rem;
+  flex-shrink: 0;
+}
+.pointnum {
+  color: #242424;
   font-family: Inter;
   font-size: 1.25rem;
   font-style: normal;
@@ -339,20 +304,105 @@ hr {
   line-height: normal;
 }
 
-#request_button {
-  width: 25rem;
-  height: 3.75rem;
+.detail_chat {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 8.4375rem;
+  height: 2.875rem;
+  flex-shrink: 0;
+  border-radius: 0.9375rem;
+  border: 1px solid #c2d3f5;
+  background: #fff;
+  margin-left: 0.44rem;
+  margin-right: 0.69rem;
+}
+.detail_chat img {
+  width: 2.0625rem;
+  height: 1.78381rem;
+  flex-shrink: 0;
+  margin-right: 0.94rem;
+}
+.chatnum {
+  color: #242424;
+  font-family: Inter;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.detail_time {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 12.5rem;
+  height: 2.875rem;
+  flex-shrink: 0;
+  border-radius: 0.9375rem;
+  border: 1px solid #c2d3f5;
+  background: #fff;
+  color: #000;
+  font-family: Inter;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.detail_right {
+  display: flex;
+  align-items: center;
+  margin-right: 2.13rem;
+}
+.detail_right a {
+  color: #ff3434;
+  text-align: right;
+  font-family: Inter;
+  font-size: 0.9375rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration-line: underline;
+}
+
+.content_container {
+  /* width: 55.125rem; */
+  height: 18.4375rem;
+  flex-shrink: 0;
+  border-radius: 0.9375rem;
+  border: 1px solid #c2d3f5;
+  background: #fff;
+  color: #242424;
+  font-family: Inter;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  padding-left: 1.03rem;
+}
+
+.solve_button {
+  display: flex;
+  margin-top: 2.19rem;
+}
+
+#solve_button {
+  width: 24.9375rem;
+  height: 4.0625rem;
   flex-shrink: 0;
   border-radius: 3rem;
   border: none;
   background: #3a7dff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   color: #fff;
   text-align: center;
   font-family: Inter;
-  font-size: 1.25rem;
+  font-size: 1.1875rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  margin-top: 1.25rem;
   cursor: pointer;
 }
