--- a/css/find_id_pw.css
+++ b/css/find_id_pw.css
@@ -3,6 +3,102 @@ body {
   min-width: 85rem;
 }
 
+/* switch */
+
+.find_container {
+  width: 18.75rem;
+  height: 3.75rem;
+  border-radius: 3rem;
+  border: 1px solid #000;
+  position: relative;
+  display: flex;
+}
+
+.find_container input {
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+}
+
+.find_container label {
+  color: #000;
+  text-align: center;
+  font-family: Inter;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  width: 50%;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* 첫 번째 입력이 선택되었을 때 첫 번째 라벨을 스타일링합니다. */
+.find_container input:nth-of-type(1):checked ~ .switch-wrapper {
+  transform: translateX(0%);
+}
+
+/* 두 번째 입력이 선택되었을 때 두 번째 라벨을 스타일링합니다. */
+.find_container input:nth-of-type(2):checked ~ .switch-wrapper {
+  transform: translateX(100%);
+}
+
+/* 해당 입력이 선택되었을 때 스위치 내용의 텍스트를 스타일링합니다. */
+.find_container
+  input:nth-of-type(1):checked
+  ~ .switch-wrapper
+  .switch
+  div:nth-of-type(1) {
+  opacity: 1;
+}
+
+.find_container
+  input:nth-of-type(2):checked
+  ~ .switch-wrapper
+  .switch
+  div:nth-of-type(2) {
+  opacity: 1;
+}
+
+/* 스위치 래퍼를 위한 스타일을 추가합니다. */
+.switch-wrapper {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 50%;
+  z-index: 3;
+  transition: transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
+}
+
+.switch {
+  border-radius: 3rem;
+  background: #3a7dff;
+  height: 100%;
+  display: flex;
+}
+
+.switch div {
+  width: 9.375rem;
+  opacity: 0;
+  display: block;
+  color: #fff;
+  text-align: center;
+  font-family: Inter;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: opacity 0.2s cubic-bezier(0.77, 0, 0.175, 1) 0.125s;
+  margin-top: 1.16rem;
+}
+
 /* Find ID page styles */
 
 .findID_header {
@@ -92,7 +188,7 @@ body {
   display: flex;
   margin-left: 0.94rem;
 }
-.findID_error p {
+#findID_error {
   color: #f00;
   text-align: right;
   font-family: Inter;
@@ -100,6 +196,7 @@ body {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  visibility: hidden;
 }
 
 .findID_button {
@@ -236,7 +333,7 @@ body {
   margin-left: 0.94rem;
 }
 
-.findPW_error p {
+#findPW_error {
   color: #f00;
   text-align: right;
   font-family: Inter;
@@ -244,6 +341,7 @@ body {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  visibility: hidden;
 }
 
 .findPW_button {
@@ -267,95 +365,4 @@ body {
   font-weight: 700;
   line-height: normal;
   cursor: pointer;
-}
-
-/* Shared styles for Find ID and Find Password */
-
-#findID_IDbox.active,
-#findID_pwbox.active {
-  background: #3a7dff;
-  color: #fff;
-}
-.wrap_findID_content,
-.wrap_findPW_content {
-  display: none;
-}
-
-.wrap_findID_content.show {
-  display: block;
-  animation: fadeIn 0.3s ease-in-out;
-}
-
-.wrap_findPW_content.show {
-  display: block;
-  animation: fadeIn 0.3s ease-in-out;
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-.findID_header_box {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  width: 18.75rem;
-  height: 3.75rem;
-  border-radius: 3rem;
-  border: 1px solid #000;
-}
-
-.findID_header_box label {
-  cursor: pointer;
-  color: #000;
-  text-align: center;
-  font-family: Inter;
-  font-size: 1.125rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-}
-
-.findID_header_box label:hover {
-  background: #f0f0f0;
-}
-
-.findID_header_box input[type="radio"] {
-  display: none;
-}
-
-#findID_radio:checked + label {
-  width: 9.375rem;
-  height: 3.75rem;
-  border-radius: 3rem;
-  border: 1px solid #000;
-  background: #3a7dff;
-  color: #fff;
-  text-align: center;
-  font-family: Inter;
-  font-size: 1.125rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-}
-
-#findPW_radio:checked + label {
-  display: flex;
-  width: 9.375rem;
-  height: 3.75rem;
-  border-radius: 3rem;
-  border: 1px solid #000;
-  background: #3a7dff;
-  color: #fff;
-  text-align: center;
-  font-family: Inter;
-  font-size: 1.125rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
 }
