--- a/css/login.css
+++ b/css/login.css
@@ -94,13 +94,14 @@ body {
   margin-left: 0.44rem;
 }
 
-.login_error p {
+#login_error {
   color: #e80000;
   font-family: Inter;
   font-size: 0.75rem;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  visibility: hidden;
 }
 
 .wrap_login_button {
