--- a/css/request_change.css
+++ b/css/request_change.css
@@ -55,7 +55,7 @@ a {
 }
 
 .help_req_a {
-  color: #939393;
+  color: #3a7dff;
   text-align: center;
   font-family: Inter;
   font-size: 1.875rem;
@@ -66,7 +66,7 @@ a {
 }
 
 .help_sol_a {
-  color: #3a7dff;
+  color: #939393;
   text-align: center;
   font-family: Inter;
   font-size: 1.875rem;
@@ -160,7 +160,7 @@ hr {
   min-width: 85rem;
 }
 
-.wrap_solve {
+.wrap_request {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -168,7 +168,7 @@ hr {
   min-width: 100rem;
 }
 
-.solve_header {
+.request_header {
   position: absolute;
   left: 27rem;
   display: flex;
@@ -176,7 +176,7 @@ hr {
   margin-bottom: 0;
 }
 
-#solve_box {
+#request_box2 {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -218,6 +218,17 @@ hr {
   text-decoration-line: underline;
 }
 
+.request_header p {
+  color: #ff7a7a;
+  font-family: Inter;
+  font-size: 0.9375rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-left: 1.06rem;
+  /* margin-right: 31.69rem; */
+}
+
 .request_container {
   width: 59.375rem;
   height: 29.25rem;
@@ -228,104 +239,99 @@ hr {
   margin-top: 4.337rem;
 }
 
-.solve_container {
-  width: 59.375rem;
-  height: 29.25rem;
-  flex-shrink: 0;
-  border-radius: 1.25rem;
-  border: 3px solid #c2d3f5;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  margin-top: 4.337rem;
-  padding-left: 1.25rem;
-  padding-right: 1.19rem;
-  padding-top: 1.25rem;
-  padding-bottom: 4rem;
-}
-
 .title_container,
-.detail_container,
 .content_container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  margin-left: 1.81rem;
 }
 
-.title_container {
-  /* width: 55.125rem; */
-  height: 2.875rem;
-  flex-shrink: 0;
-  border-radius: 0.9375rem;
-  border: 1px solid #c2d3f5;
-  background: #fff;
-  color: #242424;
+.title_container p {
+  color: #464646;
   font-family: Inter;
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  padding-left: 1.03rem;
-}
-
-.detail_container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 0.62rem;
+  margin-top: 1.06rem;
   margin-bottom: 0.69rem;
+  margin-left: 0.5rem;
 }
 
-.detail_left {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.detail_point {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 8.5rem;
-  height: 2.875rem;
+.title_container input {
+  width: 55.75rem;
+  height: 3.3125rem;
   flex-shrink: 0;
   border-radius: 0.9375rem;
   border: 1px solid #c2d3f5;
   background: #fff;
 }
-.detail_point img {
-  width: 4.375rem;
-  height: 4.375rem;
-  flex-shrink: 0;
-}
-.pointnum {
-  color: #242424;
+
+.content_container p {
+  color: #464646;
   font-family: Inter;
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  margin-top: 0.69rem;
+  margin-bottom: 0.69rem;
+  margin-left: 0.5rem;
 }
 
-.detail_chat {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  width: 8.4375rem;
-  height: 2.875rem;
+.content_container input {
+  width: 55.75rem;
+  height: 14.5rem;
   flex-shrink: 0;
   border-radius: 0.9375rem;
   border: 1px solid #c2d3f5;
   background: #fff;
-  margin-left: 0.44rem;
+}
+
+.title_container input::placeholder,
+.content_container input::placeholder {
+  color: #9f9f9f;
+  font-family: Inter;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  padding-left: 1.31rem;
+}
+
+.point_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0.94rem;
+  margin-bottom: 0.63rem;
+}
+
+.point_container p {
+  color: #464646;
+  font-family: Inter;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-top: 0;
+  margin-bottom: 0;
   margin-right: 0.69rem;
 }
-.detail_chat img {
-  width: 2.0625rem;
-  height: 1.78381rem;
+
+.point_container input {
+  width: 6.9375rem;
+  height: 3.125rem;
   flex-shrink: 0;
-  margin-right: 0.94rem;
+  border-radius: 0.9375rem;
+  border: 1px solid #c2d3f5;
+  background: #fff;
 }
-.chatnum {
-  color: #242424;
+
+.point_container input::placeholder {
+  color: #9f9f9f;
+  text-align: center;
   font-family: Inter;
   font-size: 1.25rem;
   font-style: normal;
@@ -333,77 +339,20 @@ hr {
   line-height: normal;
 }
 
-.detail_time {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  width: 12.5rem;
-  height: 2.875rem;
-  flex-shrink: 0;
-  border-radius: 0.9375rem;
-  border: 1px solid #c2d3f5;
-  background: #fff;
-  color: #000;
-  font-family: Inter;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.detail_right {
-  display: flex;
-  align-items: center;
-  margin-right: 2.13rem;
-}
-.detail_right a {
-  color: #ff3434;
-  text-align: right;
-  font-family: Inter;
-  font-size: 0.9375rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  text-decoration-line: underline;
-  cursor: pointer;
-}
-
-.content_container {
-  /* width: 55.125rem; */
-  height: 18.4375rem;
-  flex-shrink: 0;
-  border-radius: 0.9375rem;
-  border: 1px solid #c2d3f5;
-  background: #fff;
-  color: #242424;
-  font-family: Inter;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  padding-left: 1.03rem;
-}
-
-.solve_button {
-  display: flex;
-  margin-top: 2.19rem;
-}
-
-#solve_button {
-  width: 24.9375rem;
-  height: 4.0625rem;
+#change_button {
+  width: 25rem;
+  height: 3.75rem;
   flex-shrink: 0;
   border-radius: 3rem;
   border: none;
   background: #3a7dff;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   color: #fff;
   text-align: center;
   font-family: Inter;
-  font-size: 1.1875rem;
+  font-size: 1.25rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  margin-top: 1.25rem;
   cursor: pointer;
 }
