--- a/css/request_list.css
+++ b/css/request_list.css
@@ -55,7 +55,7 @@ a {
 }
 
 .help_req_a {
-  color: #3a7dff;
+  color: #939393;
   text-align: center;
   font-family: Inter;
   font-size: 1.875rem;
@@ -66,7 +66,7 @@ a {
 }
 
 .help_sol_a {
-  color: #939393;
+  color: #3a7dff;
   text-align: center;
   font-family: Inter;
   font-size: 1.875rem;
@@ -227,4 +227,159 @@ hr {
   line-height: normal;
   margin-left: 1.06rem;
   /* margin-right: 31.69rem; */
+}
+
+.wrap_request_container {
+  display: flex;
+  flex-direction: column;
+  width: 60.875rem;
+  height: 69.30056rem;
+  border-radius: 1.25rem;
+  border: 1px solid #c8c8c8;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  margin-top: 4.37rem;
+}
+
+.request_container {
+  display: flex;
+  flex-direction: column;
+  width: 57.5625rem;
+  height: 14.9375rem;
+  border-radius: 1.25rem;
+  border: 3px solid #c2d3f5;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  margin: 1.185rem 1.41rem;
+  padding-top: 1.25rem;
+  padding-bottom: 1.37rem;
+  padding-left: 1.25rem;
+  padding-left: 1.19rem;
+}
+
+.top_container {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 0.81rem;
+}
+.title_container {
+  width: 37.25rem;
+  height: 2.875rem;
+  border-radius: 0.9375rem;
+  border: 1px solid #c2d3f5;
+  background: #fff;
+
+  color: #242424;
+  font-family: Inter;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  padding-left: 1.03rem;
+  padding-top: 0.5rem;
+}
+.point_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 8.5rem;
+  height: 2.875rem;
+  border-radius: 0.9375rem;
+  border: 1px solid #c2d3f5;
+  background: #fff;
+  margin-left: 0.5rem;
+  margin-right: 0.44rem;
+
+  color: #242424;
+  font-family: Inter;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.point_container img {
+  width: 4.375rem;
+  height: 4.375rem;
+}
+.chat_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 8.4375rem;
+  height: 2.875rem;
+  border-radius: 0.9375rem;
+  border: 1px solid #c2d3f5;
+  background: #fff;
+
+  color: #242424;
+  font-family: Inter;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+.chat_container img {
+  width: 2.3125rem;
+  height: 2rem;
+  margin: 0.44rem 0.69rem;
+}
+
+.content_container {
+  display: flex;
+  width: 55.125rem;
+  height: 8.625rem;
+  flex-shrink: 0;
+  border-radius: 0.9375rem;
+  border: 1px solid #c2d3f5;
+  background: #fff;
+
+  color: #242424;
+  font-family: Inter;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  padding-top: 1.19rem;
+  padding-left: 1.03rem;
+}
+
+.requestList_footer {
+  display: flex;
+  flex-direction: row;
+  margin-top: 2.99rem;
+  margin-bottom: 11.65rem;
+}
+#footer_back {
+  width: 1.25rem;
+  height: 0.78125rem;
+  filter: opacity(0.5) drop-shadow(0 0 0 #e7e7e7);
+}
+#footer_1 {
+  width: 2.8125rem;
+  height: 3.25rem;
+  flex-shrink: 0;
+  color: #3a7dff;
+  text-align: center;
+  font-family: Inter;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+#footer_2,
+#footer_3,
+#footer_4,
+#footer_5 {
+  width: 2.8125rem;
+  height: 3.25rem;
+  flex-shrink: 0;
+  color: #636363;
+  text-align: center;
+  font-family: Inter;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+#footer_next {
+  width: 1.25rem;
+  height: 0.78125rem;
 }
