--- a/css/modify.css
+++ b/css/modify.css
@@ -170,3 +170,149 @@ hr {
     min-width: 100rem;
     overflow: hidden;
 }
+
+.wrap_content button:hover {
+    cursor: pointer;
+}
+
+.wrap_img {
+    margin: 0 auto;
+    margin-top: 0.85rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.wrap_img img {
+    width: 9.0625rem;
+    height: 9.0625rem;
+    background-color: #D9D9D9;
+    margin: 0 auto;
+    display: flex;
+}
+
+.wrap_img button {
+    margin: 0 auto;
+    margin-top: 0.72rem;
+    width: 6.74644rem;
+    height: 1.80619rem;
+    border-radius: 0.9375rem;
+    border: none;
+    background-color: #3a7dff;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #fff;
+    font-size: 0.9375rem;
+    font-weight: 700;
+}
+
+.wrap_infor {
+    margin: 0 auto;
+    margin-top: 1.31rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.wrap_infor div {
+    width: 25rem;
+    margin: 0 auto;
+    padding-left: 1.78rem;
+}
+
+.wrap_infor p {
+    display: inline-block;
+    font-size: 1.125rem;
+    font-weight: 700;
+    line-height: 1.2rem;
+}
+
+.pw button {
+    width: 6.44956rem;
+    height: 3.0625rem;
+    border-radius: 0.9375rem;
+    background-color: #3a7dff;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border: none;
+    color: #fff;
+    font-size: 1.125rem;
+    font-weight: 700;
+    float: right;
+}
+
+.wrap_change {
+    margin: 0 auto;
+    margin-top: 1.84rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.wrap_change div {
+    width: 41rem;
+    height: 5.5rem;
+    margin: 0 auto;
+    padding-left: 7.78rem;
+}
+
+.wrap_change p {
+    margin: 0;
+    margin-bottom: 0.31rem;
+    margin-left: 0.94rem;
+    color: #474747;
+    font-size: 1.125rem;
+    font-weight: 600;
+}
+
+.wrap_change input {
+    width: 25rem;
+    height: 3.125rem;
+    border-radius: 0.9375rem;
+    border: 1px solid #9B9B9B;
+    font-size: 1.125rem;
+    padding: 1rem;
+}
+
+.wrap_change button {
+    width: 6.44956rem;
+    height: 3.0625rem;
+    border-radius: 0.9375rem;
+    background-color: #3a7dff;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border: none;
+    color: #fff;
+    font-size: 1.125rem;
+    font-weight: 700;
+    float: right;
+}
+
+.wrap_btn {
+    margin: 0 auto;
+    margin-top: 1.84rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.mod_btn {
+    width: 24.9374rem;
+    height: 4.0625rem;
+    border-radius: 3rem;
+    border: none;
+    background-color: #3a7dff;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #fff;
+    font-size: 1.125rem;
+    font-weight: 700;
+    margin: 0 auto;
+}
+
+.withdraw_btn {
+    margin: 0 auto;
+    margin-top: 0.96rem;
+    width: 5.6rem;
+    height: 0.9375rem;
+    color: #929292;
+    font-size: 0.75rem;
+    font-weight: 700;
+    text-decoration-line: underline;
+    border: none;
+    background-color: #fff;
+}
