--- a/css/pw_change.css
+++ b/css/pw_change.css
@@ -170,3 +170,76 @@ hr {
     min-width: 100rem;
     overflow: hidden;
 }
+
+.wrap_content button:hover {
+    cursor: pointer;
+}
+
+.wrap_img {
+    margin: 0 auto;
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.wrap_img img {
+    width: 9.0625rem;
+    height: 9.0625rem;
+    margin: 0 auto;
+    display: flex;
+}
+
+.wrap_change {
+    margin: 0 auto;
+    margin-top: 2.3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.wrap_change div {
+    width: 41rem;
+    height: 5.5rem;
+    margin: 0 auto;
+    margin-bottom: 1rem;
+    padding-left: 7.78rem;
+}
+
+.wrap_change p {
+    margin: 0;
+    margin-bottom: 0.31rem;
+    margin-left: 0.94rem;
+    color: #474747;
+    font-size: 1.125rem;
+    font-weight: 600;
+}
+
+.wrap_change input {
+    width: 25rem;
+    height: 3.125rem;
+    border-radius: 0.9375rem;
+    border: 1px solid #9B9B9B;
+    font-size: 1.125rem;
+    padding: 1rem;
+}
+
+.wrap_btn {
+    margin: 0 auto;
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.mod_btn {
+    width: 26.81025rem;
+    height: 4.0625rem;
+    border-radius: 3rem;
+    border: none;
+    background-color: #3a7dff;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #fff;
+    font-size: 1.125rem;
+    font-weight: 700;
+    margin: 0 auto;
+}
